# lanqiao-mcu-judge

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: release.yml
assets/: wave_viewer.html
benches/: sim.rs
crates/core/: Cargo.toml
crates/core/assets/: wave_viewer.html
crates/core/benches/: sim.rs
crates/core/src/: app.rs  bench.rs  chip.rs  ids.rs  lib.rs  main.rs  script.rs  wave.rs
crates/core/src/chip/: timers.rs
crates/core/src/event/: gate.rs  i2c.rs  track.rs
crates/core/src/peripherals/: at24c02.rs  display.rs  keys.rs  mod.rs  ne555.rs
crates/core/src/script/: state_api.rs  state_target.rs
crates/core/tests/: cli.rs
crates/gui/: Cargo.toml  README.md
crates/gui/src/: api.rs  app.rs  lib.rs  main.rs  script_editor.rs  state.rs  style.rs  syntax.rs  widgets.rs
docs/: c51-cli-build.md  chip.md  judge-script-manual.md  judge-script-skill.md  peek-poke-debug.md  rhai-script-manual.md  wave-export.md
just/: linux.just  macos.just  unix.just  windows.just
sample/ad_da/: README.md
sample/ad_da/judge/: smoke.rhai
sample/ad_da/prj/: ad_da.uvproj
sample/arith_bench/: README.md
sample/arith_bench/judge/: smoke.rhai
sample/arith_bench/prj/: arith_bench.uvopt
sample/delay/judge/: smoke.rhai
sample/delay/prj/: delay.uvopt  delay.uvproj
sample/ds1302/: README.md
sample/ds1302/judge/: date_invalid.rhai  date_setting.rhai  smoke.rhai  time_setting.rhai  toggle_12h.rhai
sample/ds1302/prj/: ds1302.uvopt  ds1302.uvproj
sample/ds18b20/judge/: smoke.rhai
sample/ds18b20/prj/: ds18b20.uvopt  ds18b20.uvproj
sample/eeprom_rw/: README.md
sample/eeprom_rw/judge/: smoke.rhai
sample/eeprom_rw/prj/: eeprom_rw.uvopt  eeprom_rw.uvproj
sample/key_seg/judge/: smoke.rhai
sample/key_seg/prj/: key_seg.uvproj
sample/key_seg_btn/judge/: smoke.rhai
sample/key_seg_btn/prj/: key_seg_btn.uvproj
sample/la17/: README.md
sample/la17/judge/: eeprom_restore.rhai  key_and_save.rhai  manual_dac_bounds.rhai  sensor_and_alarm.rhai  smoke.rhai  temperature_precision.rhai  uart_protocol.rhai
sample/la17/prj/: la17.uvopt  la17.uvproj
sample/led_flicker/: README.md
sample/led_flicker/judge/: smoke.rhai
sample/led_flicker/prj/: led_flicker.uvproj
sample/led_pwm/: README.md
sample/led_pwm/judge/: smoke.rhai
sample/led_pwm/prj/: led_pwm.uvopt  led_pwm.uvproj
sample/na16/: README.md  judge.md  na16.hex  rtc_after_boot.rhai  smoke.rhai
sample/na16/judge/: 4t.rhai  freq_502.rhai  freq_alarm_flow.rhai  key_and_save.rhai  (+6 more)
sample/ne555/: README.md
sample/persistent_state/: README.md
sample/uart/: README.md
sample/uart_periodic_tx/: README.md
sample/us/: README.md
samples/delay/: README.md
samples/ds18b20/: README.md
samples/eeprom_rw/: README.md
samples/key_seg/: README.md
samples/key_seg_btn/: README.md
samples/la17/: README.md
samples/led_flicker/: README.md
samples/na15/: judge.md
samples/uart_multi_ti_isr/: README.md
scripts/: analyze-objects.ps1  analyze-objects.sh  build-sample-macos.sh  build-uvproj-macos.sh  build-uvproj-windows.ps1  keil-env-doctor.sh  path-helpers.sh
scripts/just/: linux.just  macos.just  windows.just
src/: app.rs  chip.rs  hex.rs  ids.rs  jumper.rs  machine.rs  main.rs  persistent_state.rs  registers.rs  script.rs  script_target.rs  timing.rs  wave.rs
src/chip/: registers.rs  timers.rs
src/event/: gate.rs  i2c.rs  mod.rs  seg.rs  tracker.rs
src/peripherals/: analog.rs  at24c02.rs  display.rs  ds1302.rs  ds18b20.rs  i2c.rs  i2c_slave.rs  keys.rs  mod.rs  ne555.rs  pcf8591.rs  rtc.rs  ultrasonic.rs
src/script/: event_track.rs  run_target.rs  state_api.rs  wait_api.rs
tests/: cli.rs  print_cli.rs
(+280 files in other folders)
