[workspace]
members = [
    "crates/core",
    "crates/gui",
]
default-members = ["crates/core"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive"] }
criterion = "0.8.2"
i8051 = "0.13.0"
ihex = "3.0.0"
regex = "1.12.2"
rhai = { version = "1.23.6", features = ["sync", "debugging"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
eframe = { version = "0.34.3", default-features = false, features = ["accesskit", "default_fonts", "glow", "wayland", "x11"] }
egui = "0.34.3"
egui_extras = "0.34.3"
rfd = "0.17.2"

[patch.crates-io]
i8051 = { path = "vendor/i8051" }

[profile.samply]
inherits = "release"
debug = true
